[gd_scene load_steps=21 format=3 uid="uid://r47flpeltgam"]

[ext_resource type="PackedScene" uid="uid://cwrcykqrx2d1l" path="res://scenes/levels/level.tscn" id="1_1dds5"]
[ext_resource type="PackedScene" uid="uid://cy3cusc5gsgj1" path="res://scenes/objects/gate.tscn" id="2_ic5ai"]
[ext_resource type="Script" path="res://scenes/levels/outside.gd" id="2_snte2"]
[ext_resource type="Texture2D" uid="uid://cx0dl1jkx1fyu" path="res://graphics/ground/stones.png" id="2_uctgt"]
[ext_resource type="Texture2D" uid="uid://cq5b48cpsd7c6" path="res://graphics/decals/dirt_patch.png" id="3_mtwxy"]
[ext_resource type="Texture2D" uid="uid://bugrvatrs446g" path="res://graphics/tilesets/outside_walls.png" id="4_nw1l0"]
[ext_resource type="Texture2D" uid="uid://byx8jhd0t1dvo" path="res://graphics/tilesets/soil.png" id="5_qgj2n"]
[ext_resource type="Texture2D" uid="uid://e0cejhppwdir" path="res://graphics/decals/moss/moss_1.png" id="6_a02wh"]
[ext_resource type="Texture2D" uid="uid://4pipb8u2ul46" path="res://graphics/decals/moss/moss_2.png" id="7_sija8"]
[ext_resource type="Texture2D" uid="uid://doyardqfur0e3" path="res://graphics/decals/moss/moss_3.png" id="8_v6mel"]
[ext_resource type="Texture2D" uid="uid://c3wetym4us86y" path="res://graphics/decals/moss/moss_4.png" id="9_lt3xg"]
[ext_resource type="Texture2D" uid="uid://cx57hj1xyumkv" path="res://graphics/decals/moss/moss_5.png" id="10_qni0l"]
[ext_resource type="PackedScene" uid="uid://ibnccosx17eh" path="res://scenes/houses/house.tscn" id="11_o0v0h"]
[ext_resource type="PackedScene" uid="uid://cgbs30enh15f" path="res://scenes/objects/steam_vent.tscn" id="12_txvmx"]
[ext_resource type="PackedScene" uid="uid://kpyle7vcjuyb" path="res://scenes/objects/light_fan_animation.tscn" id="13_ui5is"]
[ext_resource type="PackedScene" uid="uid://chwmadsmym0ki" path="res://scenes/enemies/car.tscn" id="16_p5o7e"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2sv5i"]
resource_name = "walls"
texture = ExtResource("4_nw1l0")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-66.5, -57.5, 195, -58.5, 195, 58.5, -66.5, 58)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(195, 58.75, -195, 58.5, -195, -59.25, 195, -58.75)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(66.5, -57.5, -195, -58.5, -195, 58.5, 66.5, 58)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-57.5, -66.5, -58.5, 195, 58.5, 195, 58, -66.5)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(195, 58.75, 58.8666, 58.8666, 58.75, 195, -58.5131, 195, -59.5737, -58.5131, 195, -58.75)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-58.75, 195, -58.8666, 58.8666, -195, 58.75, -195, -58.5131, 58.5131, -59.5737, 58.75, 195)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-58.75, 195, -58.5, -195, 59.25, -195, 58.75, 195)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(58.75, -195, 58.8666, -58.8666, 195, -58.75, 195, 58.5131, -58.5131, 59.5737, -58.75, -195)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-195, -58.75, -58.8666, -58.8666, -58.75, -195, 58.5131, -195, 59.5737, 58.5131, -195, 58.75)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-57.5, 66.5, -58.5, -195, 58.5, -195, 58, 66.5)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gd0ri"]
resource_name = "soil"
texture = ExtResource("5_qgj2n")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_fcg1r"]
tile_size = Vector2i(390, 390)
physics_layer_0/collision_layer = 16
physics_layer_0/collision_mask = 15
sources/0 = SubResource("TileSetAtlasSource_2sv5i")
sources/1 = SubResource("TileSetAtlasSource_gd0ri")

[sub_resource type="Curve2D" id="Curve2D_w4c32"]
_data = {
"points": PackedVector2Array(-463.862, -214.96, 463.862, 214.96, -1109, 1788, -599.627, -101.823, 599.627, 101.823, 283, 1913, -565.685, -463.862, 565.685, 463.862, 1403, 3078, -305.47, -11.3137, 305.47, 11.3137, 3112, 3463, -724.077, 509.117, 724.077, -509.117, 5578, 2852, -67.8823, 350.725, 67.8823, -350.725, 6630, 974, 79.196, 294.156, -79.196, -294.156, 6562, -814, 346.758, -49.0048, -346.758, 49.0048, 5736, -1380, -22.6658, -286.311, 22.6658, 286.311, 5306, -904, 101.823, -395.98, -101.823, 395.98, 5601, 589, 384.666, -113.137, -384.666, 113.137, 5238, 1234, 214.96, 169.706, -214.96, -169.706, 4107, 1109, -33.9411, 305.47, 33.9411, -305.47, 3768, 250, -45.2548, 644.881, 45.2548, -644.881, 3971, -644, 181.019, 226.274, -181.019, -226.274, 3689, -1753, 101.823, 39.598, -101.823, -39.598, 3168, -2307, 271.529, -237.588, -271.529, 237.588, -2263, -2138, 22.6274, -237.588, -22.6274, 237.588, -2840, -961, -181.019, -226.274, 181.019, 226.274, -1912, 962, 0, 0, 0, 0, -1109, 1788)
}
point_count = 20

[node name="Outside" instance=ExtResource("1_1dds5")]
script = ExtResource("2_snte2")

[node name="Gate" parent="." index="1" instance=ExtResource("2_ic5ai")]
z_index = 1
position = Vector2(511, -495)
metadata/_edit_lock_ = true

[node name="Soil" type="Sprite2D" parent="Ground" index="0"]
texture_repeat = 2
position = Vector2(124.103, 2.05128)
texture = ExtResource("2_uctgt")
region_enabled = true
region_rect = Rect2(-4312.84, -2794.85, 16000, 8000)
metadata/_edit_lock_ = true

[node name="Decoration" type="Sprite2D" parent="Ground" index="1"]
modulate = Color(0.94902, 0.843137, 0.478431, 1)
position = Vector2(501.539, 289.231)
texture = ExtResource("3_mtwxy")
metadata/_edit_lock_ = true

[node name="TileMap" type="TileMap" parent="Ground" index="2"]
tile_set = SubResource("TileSet_fcg1r")
format = 2
layer_0/name = "Soil"
layer_0/tile_data = PackedInt32Array(-65539, 1, 0, 131069, 1, 2, -131069, 131073, 0, 65539, 65537, 1, 65533, 1, 1, -3, 1, 1, -65538, 65537, 0, -65537, 65537, 0, -131072, 65537, 0, -131071, 65537, 0, -131070, 65537, 0, -65533, 131073, 1, 3, 65537, 1, 65538, 65537, 1, 65537, 65537, 1, 65536, 65537, 2, 131071, 65537, 2, 131070, 65537, 2, -2, 65537, 1, 65534, 65537, 1, -1, 65537, 1, 65535, 65537, 1, -65536, 65537, 1, 0, 65537, 1, -65535, 65537, 1, 1, 65537, 1, -65534, 65537, 1, 2, 65537, 1, 131074, 65537, 1, 196610, 65537, 1, 196611, 65537, 1, 196612, 65537, 1, 196613, 65537, 1, 131073, 1, 1, 196609, 1, 1, 262145, 1, 2, 262146, 65537, 2, 262147, 65537, 2, 262148, 65537, 2, 262149, 65537, 2, 262150, 65537, 2, 262151, 131073, 2, 7, 131073, 0, 65543, 131073, 1, 131079, 131073, 1, 196615, 131073, 1, 4, 65537, 0, 5, 65537, 0, 6, 65537, 0, 131075, 65537, 1, 65540, 65537, 1, 131076, 65537, 1, 65541, 65537, 1, 131077, 65537, 1, 65542, 65537, 1, 131078, 65537, 1, 196614, 65537, 1)
layer_1/name = "Walls"
layer_1/tile_data = PackedInt32Array(131069, 65536, 2, 131070, 65536, 0, 131071, 65536, 0, 65536, 65536, 0, -65533, 0, 2, -131069, 131072, 1, -131070, 65536, 0, -131071, 65536, 0, -131072, 65536, 0, -65537, 65536, 0, -65538, 65536, 0, -65539, 65536, 1, 65533, 0, 2, -3, 0, 2, 3, 65536, 2, 4, 65536, 0, 5, 65536, 0, 6, 65536, 0, 7, 131072, 1, 65543, 0, 2, 131079, 0, 2, 196615, 0, 2, 262151, 131072, 2, 262146, 65536, 0, 262147, 65536, 0, 262148, 65536, 0, 262149, 65536, 0, 262150, 65536, 0, 262145, 65536, 2, 196609, 0, 2, 131073, 0, 2, 65537, 131072, 1)
metadata/_edit_lock_ = true

[node name="Moss1" type="Sprite2D" parent="Ground" index="3"]
position = Vector2(-278.462, 709.744)
scale = Vector2(0.512821, 0.512821)
texture = ExtResource("6_a02wh")
metadata/_edit_lock_ = true

[node name="Moss2" type="Sprite2D" parent="Ground" index="4"]
position = Vector2(407.692, 777.949)
scale = Vector2(0.641639, 0.651258)
texture = ExtResource("7_sija8")
metadata/_edit_lock_ = true

[node name="Moss3" type="Sprite2D" parent="Ground" index="5"]
position = Vector2(349.231, 714.359)
scale = Vector2(0.512821, 0.512821)
texture = ExtResource("8_v6mel")
metadata/_edit_lock_ = true

[node name="Moss4" type="Sprite2D" parent="Ground" index="6"]
position = Vector2(1167.69, 144.615)
scale = Vector2(0.512821, 0.512821)
texture = ExtResource("9_lt3xg")
metadata/_edit_lock_ = true

[node name="Moss5" type="Sprite2D" parent="Ground" index="7"]
position = Vector2(1078.46, 341.538)
scale = Vector2(0.512821, 0.512821)
texture = ExtResource("10_qni0l")
metadata/_edit_lock_ = true

[node name="House" parent="Ground" index="8" instance=ExtResource("11_o0v0h")]
position = Vector2(-1178.46, 2429.74)
rotation = -2.25032
metadata/_edit_lock_ = true

[node name="SteamVent" parent="Ground" index="9" instance=ExtResource("12_txvmx")]
position = Vector2(-238.462, 368.718)

[node name="SteamVent2" parent="Ground" index="10" instance=ExtResource("12_txvmx")]
position = Vector2(877.436, 1152.31)

[node name="SteamVent3" parent="Ground" index="11" instance=ExtResource("12_txvmx")]
position = Vector2(1435.38, 762.564)

[node name="SteamVent4" parent="Ground" index="12" instance=ExtResource("12_txvmx")]
position = Vector2(1706.15, 1509.23)

[node name="SteamVent5" parent="Ground" index="13" instance=ExtResource("12_txvmx")]
position = Vector2(2493.85, 1086.67)

[node name="LightFanAnimation" parent="Ground" index="14" instance=ExtResource("13_ui5is")]
position = Vector2(-1374.36, 1403.08)
autoplay = "default"
frame_progress = 0.356668

[node name="Items" parent="." index="4"]
metadata/_edit_lock_ = true

[node name="Player" parent="." index="7"]
z_index = 2
position = Vector2(90, 1664)
rotation = 1.43467

[node name="Camera2D" parent="Player" index="6"]
metadata/_edit_lock_ = true

[node name="CarPath" type="Path2D" parent="." index="9"]
curve = SubResource("Curve2D_w4c32")

[node name="Car" parent="CarPath" index="0" instance=ExtResource("16_p5o7e")]
position = Vector2(-1109, 1788)
rotation = 0.433953

[connection signal="player_enered_gate" from="Gate" to="." method="_on_gate_player_enered_gate"]
[connection signal="player_entered" from="Ground/House" to="." method="_on_house_player_entered"]
[connection signal="player_exited" from="Ground/House" to="." method="_on_house_player_exited"]
